@@ -1,4 +1,17 @@
 
+Изменения в nginx 1.3.13                                          19.02.2013
+
+    *) Изменение: теперь для сборки по умолчанию используется компилятор с
+       именем "cc".
+
+    *) Добавление: поддержка проксирования WebSocket-соединений.
+       Спасибо Apcera и CloudBees за спонсирование разработки.
+
+    *) Добавление: директива auth_basic_user_file поддерживает шифрование
+       паролей методом "{SHA}".
+       Спасибо Louis Opter.
+
+
 Изменения в nginx 1.3.12                                          05.02.2013
 
     *) Добавление: директивы proxy_bind, fastcgi_bind, memcached_bind,
