@@ -7,6 +7,14 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2013-02-19">
+<para>
+<link doc="en/download.xml">nginx-1.3.13</link>
+development version has been released,
+featuring support for proxying of WebSocket connections.
+</para>
+</event>
+
 <event date="2013-02-12">
 <para>
 <link doc="en/download.xml">nginx-1.2.7</link>
