@@ -9,6 +9,7 @@
 
 <download tag="development" changes="">
 
+<item ver="1.3.13" />
 <item ver="1.3.12" />
 <item ver="1.3.11" />
 <item ver="1.3.10" />
